[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"
asyncio_mode = "auto"
markers = [
    "APP_PORT: Sets the APP_PORT env variable variable at test startup",
    "SERVER_URL: Sets the SERVER_URL env variable variable at test startup",
    "MOUNT_POINT: Sets the MOUNT_POINT env variable variable at test startup",
    "MAX_IDLE_DURATION_SECONDS: Sets the MAX_IDLE_DURATION_SECONDS env variable variable at test startup",
    "MAX_DURATION_SECONDS: Sets the MAX_DURATION_SECONDS env variable variable at test startup",
    "MAX_ACTIVE_ENDPOINTS: Sets the MAX_ACTIVE_ENDPOINTS env variable variable at test startup",
    "MAX_ENDPOINT_NOTIFICATIONS: Sets the MAX_ENDPOINT_NOTIFICATIONS env variable variable at test startup",
    "CLEANUP_FREQUENCY_SECONDS: Sets the CLEANUP_FREQUENCY_SECONDS env variable variable at test startup",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "S", "C90", "B", "UP", "ANN", "N"]
ignore = ["N806"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "ANN", "N"]

[tool.ty.src]
include = ["src", "tests"]


[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cactus_client_notifications"
requires-python = ">=3.12"
dynamic = ["version", "readme"]
description = "Mini webserver for accepting CSIP-Aus subscription notifications via dynamic webhook URIs."
dependencies = [
    "cactus-schema>=0.0.4,<1",
    "aiohttp>=3.11.12,<4",
] # These dependencies are purely for the schema (the default reference). Server dependencies require "server"

[project.optional-dependencies]
dev = ["bandit", "ruff", "ty", "coverage", "pytest-cov"]
test = ["assertical", "pytest", "pytest-asyncio", "pytest-aiohttp", "freezegun", "pytest-xdist"]

[tool.setuptools.package-data]
"cactus_client_notifications" = ["py.typed", "**/*.xsd"]

[tool.setuptools.dynamic]
version = { attr = "cactus_client_notifications.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }
